<resources>
    <string name="app_name">RemoteVLCApp</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <!--  Nav View Menu -->
    <string name="nav_browse">Browse</string>
    <string name="nav_remote">Remote</string>
    <string name="nav_media_centers">Media Centers</string>
    <string name="nav_settings">Settings</string>

    <!-- Toolbar Titles   -->
    <string name="remote_title">Remote</string>
    <string name="host_list_title">Hosts</string>
    <string name="host_search_title">Host Search</string>
    <string name="host_configuration_title">Host Configuration</string>
    <string name="settings_title">Settings</string>

    <!--  Player Buttons  -->
    <string name="rewind">Rewind</string>
    <string name="fast_forward">Fast forward</string>
    <string name="stop">Stop</string>
    <!--    <string name="play_pause">Play pause</string>-->
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="random">Random</string>
    <string name="loop">Loop</string>
    <string name="repeat">Repeat</string>
    <string name="mute">Mute</string>
    <string name="fullscreen">Fullscreen</string>
    <string name="aspect_ratio">Aspect ratio</string>
    <string name="subtitle_track">Subtitle track</string>
    <string name="audio_track">Audio track</string>
    <string name="volume_down">Volume down</string>
    <string name="volume_up">Volume up</string>

    <!--  Navigation Buttons  -->
    <string name="navigate_up">Navigate up</string>
    <string name="navigate_right">Navigate right</string>
    <string name="navigate_down">Navigate down</string>
    <string name="navigate_left">Navigate left</string>
    <string name="navigate_back">Navigate back</string>
    <string name="navigate_activate">Navigate click</string>

    <!--  Remote  -->
    <string name="now_playing">Now playing:</string>
    <string name="nothing_playing">Nothing is playing.</string>
    <string name="connecting">Connecting…</string>
    <string name="connecting_to">Connecting to %1$s (%2$s)…</string>
    <string name="not_connected">Not connected</string>
    <string name="select_add_media_center">Please, select or add a media center</string>

    <!--  Host Search  -->
    <string name="searching_hosts">Searching for media centers on your local network…</string>
    <string name="found_hosts">Found these media centers on your network.\n\nSelect one to add or press \'Skip\' to manually add a new one.</string>
    <string name="retry">Retry</string>
    <string name="skip">Skip</string>

    <!--  Host Configuration  -->
    <string name="enter_your_host_configuration">Enter your host configuration:</string>
    <string name="unable_to_resolve_host_msg">Unable to resolve host.\nPlease check the configuration.</string>
    <string name="host_name_error_msg">Please, enter a name for the media center</string>
    <string name="host_address_error_msg">Please, enter a valid address</string>
    <string name="port_error_msg">Please, enter a valid port</string>
    <string name="password_error_msg">Please, enter a password</string>
    <string name="connect_dialog_message">Checking the connection with your media center</string>
    <string name="save">Save</string>
    <string name="name_hint">Name</string>
    <string name="address_hint">Address</string>
    <string name="port_hint">Port</string>
    <string name="password_hint">Password</string>

    <!--  Settings  -->
    <string name="application">Application</string>
    <string name="theme">Theme</string>
    <string name="enable_notifications">Enable notifications</string>
    <string name="keep_screen_on">Keep screen on</string>
    <string name="theme_dialog_title">Choose theme</string>

    <!-- Browse  -->
    <string name="browse_no_connection">No connection. \n\nPlease check your media center configuration or connection.</string>
    <string name="browse_loading">Loading… \n\nThis screen will be automatically updated when it finishes.</string>

    <!-- Dialogs  -->
    <string name="password_dialog_title">Enter password</string>
    <string name="password_dialog_msg">Enter the password set in VLC preferences:</string>
    <string name="password_dialog_hint">Password</string>

    <string name="host_delete_dialog_title">Delete media center</string>
    <string name="host_delete_dialog_msg">Are you sure?</string>

</resources>
