<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        style="@style/Widget.RemoteVLCApp.AppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            app:navigationIcon="@drawable/ic_menu"
            app:title="@string/remote_title" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/motion_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutDescription="@xml/remote_motion"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/file_connection_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:orientation="vertical"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/info1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/not_connected"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

            <TextView
                android:id="@+id/info2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:lines="2"
                android:text="@string/select_add_media_center"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textSize="16sp" />

        </LinearLayout>

        <GridLayout
            android:id="@+id/navigation_controls"
            android:layout_width="285dp"
            android:layout_height="285dp"
            android:columnCount="3"
            android:rowCount="3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/playback_controls"
            app:layout_constraintTop_toBottomOf="@+id/file_connection_info">

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1" />

            <Button
                android:id="@+id/nav_up"
                style="@style/Widget.RemoteVLCApp.GridNavigationButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/navigate_up"
                app:icon="@drawable/ic_navigation_up" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1" />

            <Button
                android:id="@+id/nav_left"
                style="@style/Widget.RemoteVLCApp.GridNavigationButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/navigate_left"
                app:icon="@drawable/ic_navigation_left" />

            <Button
                android:id="@+id/nav_click"
                style="@style/Widget.RemoteVLCApp.GridNavigationButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_vertical"
                android:contentDescription="@string/navigate_activate"
                app:icon="@drawable/ic_circle"
                app:iconSize="28dp"
                app:iconTint="@color/default_button_color" />

            <Button
                android:id="@+id/nav_right"
                style="@style/Widget.RemoteVLCApp.GridNavigationButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/navigate_right"
                app:icon="@drawable/ic_navigation_right" />

            <Button
                android:id="@+id/nav_back"
                style="@style/Widget.RemoteVLCApp.GridNavigationButton"
                app:backgroundTint="@color/transparent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/navigate_back"
                app:icon="@drawable/ic_navigation_back"
                app:iconTint="@color/default_button_color" />

            <Button
                android:id="@+id/nav_down"
                style="@style/Widget.RemoteVLCApp.GridNavigationButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/navigate_down"
                app:icon="@drawable/ic_navigation_down" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1" />

        </GridLayout>

        <LinearLayout
            android:id="@+id/playback_controls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@id/playback_controls"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <Button
                    android:id="@+id/audiotrack"
                    style="@style/Widget.RemoteVLCApp.RemoteButton2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/audio_track"
                    app:icon="@drawable/ic_audiotrack" />

                <Button
                    android:id="@+id/subtitles"
                    style="@style/Widget.RemoteVLCApp.RemoteButton2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/subtitle_track"
                    app:icon="@drawable/ic_subtitles" />

                <Button
                    android:id="@+id/stop"
                    style="@style/Widget.RemoteVLCApp.RemoteButton2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/stop"
                    app:icon="@drawable/ic_stop" />

                <com.example.android.remotevlcapp.widget.HighlightMaterialButton
                    android:id="@+id/fullscreen"
                    style="@style/Widget.RemoteVLCApp.RemoteButton2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/fullscreen"
                    app:icon="@drawable/ic_fullscreen"
                    app:iconSize="28dp" />

                <Button
                    android:id="@+id/aspect_ratio"
                    style="@style/Widget.RemoteVLCApp.RemoteButton2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/aspect_ratio"
                    app:icon="@drawable/ic_aspect_ratio" />

            </LinearLayout>

            <!--            <com.example.android.remotevlcapp.widget.MediaSeekBar-->
            <!--                android:id="@+id/media_seek_bar"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:gravity="center_vertical"-->
            <!--                android:paddingStart="8dp"-->
            <!--                android:paddingEnd="8dp" />-->

            <com.example.android.remotevlcapp.widget.MediaSlider
                android:id="@+id/media_slider"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:gravity="center_vertical"
                android:paddingStart="8dp"
                android:paddingEnd="8dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/previous"
                    style="@style/Widget.RemoteVLCApp.PlaybackButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/previous"
                    app:icon="@drawable/ic_skip_previous" />

                <Button
                    android:id="@+id/rewind"
                    style="@style/Widget.RemoteVLCApp.PlaybackButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/rewind"
                    app:icon="@drawable/ic_fast_rewind" />

                <com.example.android.remotevlcapp.widget.PlayPauseMaterialButton
                    android:id="@+id/play_pause"
                    style="@style/Widget.RemoteVLCApp.PlaybackButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/play_pause"
                    app:icon="@drawable/ic_play" />

                <!--                <com.example.android.remotevlcapp.widget.PlayPauseButton-->
                <!--                    android:id="@+id/play_pause"-->
                <!--                    style="@style/Widget.RemoteVLCApp.ActionButton"-->
                <!--                    android:layout_width="0dp"-->
                <!--                    android:layout_height="match_parent"-->
                <!--                    android:layout_weight="1"-->
                <!--                    android:contentDescription="@string/play_pause"-->
                <!--                    android:src="@drawable/avd_play_to_pause" />-->

                <Button
                    android:id="@+id/fast_forward"
                    style="@style/Widget.RemoteVLCApp.PlaybackButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/fast_forward"
                    app:icon="@drawable/ic_fast_forward" />

                <Button
                    android:id="@+id/next"
                    style="@style/Widget.RemoteVLCApp.PlaybackButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/next"
                    app:icon="@drawable/ic_skip_next" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/volume_down"
                    style="@style/Widget.RemoteVLCApp.PlaybackButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/volume_down"
                    app:icon="@drawable/ic_volume_down" />

                <Button
                    android:id="@+id/mute"
                    style="@style/Widget.RemoteVLCApp.PlaybackButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/mute"
                    app:icon="@drawable/ic_volume_off" />

                <Button
                    android:id="@+id/volume_up"
                    style="@style/Widget.RemoteVLCApp.PlaybackButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/volume_up"
                    app:icon="@drawable/ic_volume_up" />

                <!--                <com.example.android.remotevlcapp.widget.VolumeSeekBar-->
                <!--                    android:id="@+id/volume_seek_bar"-->
                <!--                    android:layout_width="0dp"-->
                <!--                    android:layout_height="match_parent"-->
                <!--                    android:layout_marginBottom="12dp"-->
                <!--                    android:layout_weight="2"-->
                <!--                    android:gravity="center_vertical"-->
                <!--                    android:orientation="vertical" />-->

                <com.example.android.remotevlcapp.widget.HighlightMaterialButton
                    android:id="@+id/random"
                    style="@style/Widget.RemoteVLCApp.PlaybackButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/random"
                    app:icon="@drawable/ic_shuffle" />

                <com.example.android.remotevlcapp.widget.RepeatButton
                    android:id="@+id/repeat"
                    style="@style/Widget.RemoteVLCApp.PlaybackButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/repeat"
                    app:icon="@drawable/ic_repeat" />

            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.motion.widget.MotionLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>