<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/now_playing_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/fragment_background"
        android:backgroundTint="?attr/colorSurface"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:dividerHorizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/item_icon_background"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:ellipsize="end"
                android:maxLines="2"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textAppearance="?textAppearanceListItem"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:text="Movie title" />

            <ImageButton
                android:id="@+id/stop"
                style="@style/Widget.ActionButton"
                android:layout_width="48dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/stop"
                android:src="@drawable/ic_stop" />

            <com.example.android.remotevlcapp.widget.PlayPauseButton
                android:id="@+id/playPause"
                style="@style/Widget.ActionButton"
                android:layout_width="48dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/play_pause"
                android:src="@drawable/avd_play_to_pause" />

            <ImageButton
                android:id="@+id/next"
                style="@style/Widget.ActionButton"
                android:layout_width="48dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/next"
                android:src="@drawable/ic_skip_next" />

        </LinearLayout>

        <com.example.android.remotevlcapp.widget.MediaSeekBar
            android:id="@+id/mediaSeekBar"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:paddingStart="8dp"
            android:paddingEnd="8dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal">

            <com.example.android.remotevlcapp.widget.HighlightButton
                android:id="@+id/fullscreen"
                style="@style/Widget.ActionButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/fullscreen"
                android:src="@drawable/ic_fullscreen" />

            <com.example.android.remotevlcapp.widget.HighlightButton
                android:id="@+id/shuffle"
                style="@style/Widget.ActionButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/random"
                android:src="@drawable/ic_shuffle" />

            <com.example.android.remotevlcapp.widget.RepeatButton
                android:id="@+id/repeat"
                style="@style/Widget.ActionButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/repeat"
                android:src="@drawable/ic_repeat" />

            <ImageButton
                android:id="@+id/rewind"
                style="@style/Widget.ActionButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/rewind"
                android:src="@drawable/ic_fast_rewind" />

            <ImageButton
                android:id="@+id/fast_forward"
                style="@style/Widget.ActionButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/fast_forward"
                android:src="@drawable/ic_fast_forward" />

        </LinearLayout>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>