<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            app:navigationIcon="@drawable/ic_menu"
            app:title="Settings" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="?listPreferredItemPaddingStart"
                android:paddingTop="12dp"
                android:paddingEnd="?listPreferredItemPaddingEnd"
                android:paddingBottom="8dp"
                android:text="@string/application"
                android:textColor="@color/color_primary"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/settings_choose_theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/theme"
                    android:textAppearance="?textAppearanceBody1" />

                <TextView
                    android:id="@+id/current_theme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Theme" />

            </LinearLayout>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/settings_enable_notifications"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:paddingStart="?listPreferredItemPaddingStart"
                android:paddingEnd="?listPreferredItemPaddingEnd"
                android:text="@string/enable_notifications"
                android:textAlignment="viewStart"
                android:textAppearance="?textAppearanceBody1" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/settings_keep_screen_on"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:paddingStart="?listPreferredItemPaddingStart"
                android:paddingEnd="?listPreferredItemPaddingEnd"
                android:text="@string/keep_screen_on"
                android:textAlignment="viewStart"
                android:textAppearance="?textAppearanceBody1" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>